add code to ensure stdout is always converted to a byte str before outputting strings to the terminal or to a file

--- a/h2o-py/demos/Predict_w_Unseen_Categorical_Levels.ipynb
+++ b/h2o-py/demos/Predict_w_Unseen_Categorical_Levels.ipynb
@@ -50,7 +50,12 @@
     "from h2o.estimators.random_forest import H2ORandomForestEstimator\n",
     "from h2o.estimators.deeplearning import H2ODeepLearningEstimator\n",
     "from h2o.estimators.naive_bayes import H2ONaiveBayesEstimator\n",
-    "from tabulate import tabulate"
+    "from tabulate import tabulate\n",
+    "import codecs\n",
+    "import sys\n",
+    "\n",
+    "UTF8Writer = codecs.getwriter('utf8')\n",
+    "sys.stdout = UTF8Writer(sys.stdout)"
    ]
   },
   {
